# CMake-tutorial

./: README.md
advanced_sample_prject/: CMakeLists.txt  README.md  tmp  tutorial.cpp
advanced_sample_prject/MathFunctions/: MathFunctions.h
advanced_sample_project/: README.md  tutorial.cpp
advanced_sample_project/MathFunctions/: CMakeLists.txt  mysqrt.cpp
auto_testing_sample_project/: CMakeLists.txt  README.md  TutorialConfig.h.in  tutorial.cpp
basic_sample_project/: .README.md.swp  README.md
cross_compilation_sample_project/: CMakeLists.txt  README.md  command.txt  cross_compile.sh  envi_variables.sh  sample_cross_compile_toolchain_file.cmake
intermediate_sample_project/: CMakeLists.txt  README.md  TutorialConfig.h.in  tutorial.cpp
intermediate_sample_project/MathFunctions/: Makefile  cmake_install.cmake
